restructure solution file folder

--- a/src/Webmaster/src/Wangkanai.Webmaster.csproj
+++ b/src/Webmaster/src/Wangkanai.Webmaster.csproj
@@ -10,6 +10,6 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Webmaster.Core\src\Wangkanai.Webmaster.Core\Wangkanai.Webmaster.Core.csproj" />
+    <ProjectReference Include="..\..\Webmaster.Core\src\Wangkanai.Webmaster.Core.csproj" />
   </ItemGroup>
 </Project>
