--- a/sample/Search.Mvc/Search.Mvc.csproj
+++ b/sample/Search.Mvc/Search.Mvc.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Webmaster\src\Wangkanai.Webmaster\Wangkanai.Webmaster.csproj" />
+    <ProjectReference Include="..\..\src\Webmaster\src\Wangkanai.Webmaster.csproj" />
   </ItemGroup>
 
 </Project>
