--- a/src/Webmaster.TagHelpers/src/Wangkanai.Webmaster.TagHelpers.csproj
+++ b/src/Webmaster.TagHelpers/src/Wangkanai.Webmaster.TagHelpers.csproj
@@ -7,5 +7,9 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Webmaster.Core\src\Wangkanai.Webmaster.Core.csproj" />
+  </ItemGroup>
   
 </Project>
