--- a/sample/Search.RazorPagesApp/Search.RazorPagesApp.csproj
+++ b/sample/Search.RazorPagesApp/Search.RazorPagesApp.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Webmaster\src\Wangkanai.Webmaster.csproj" />
   </ItemGroup>
 
