--- a/src/Webmaster.Razor/src/Wangkanai.Webmaster.Razor.csproj
+++ b/src/Webmaster.Razor/src/Wangkanai.Webmaster.Razor.csproj
@@ -2,15 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IsAspNetCoreApp>true</IsAspNetCoreApp>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Webmaster.Core\src\Wangkanai.Webmaster.Core.csproj" />
-    <ProjectReference Include="..\..\Webmaster.Razor\src\Wangkanai.Webmaster.Razor.csproj" />
-  </ItemGroup>
-  
 </Project>
