--- a/src/Webmaster/src/Wangkanai.Webmaster.csproj
+++ b/src/Webmaster/src/Wangkanai.Webmaster.csproj
@@ -14,7 +14,7 @@
     <Authors>Sarin Na Wangkanai</Authors>
 
     <LangVersion>8.0</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
+    <Nullable>enable</Nullable>
 
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
 
