--- a/src/Webmaster.TagHelpers/src/Wangkanai.Webmaster.TagHelpers.csproj
+++ b/src/Webmaster.TagHelpers/src/Wangkanai.Webmaster.TagHelpers.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <Version>0.0.2</Version>
+
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
