--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,14 +15,13 @@ build_script:
   - ps: ./run.ps1
 clone_depth: 1
 test: 'off'
-deploy:
-- provider: NuGet
-  api_key:
-    secure: +WkQsLfLX+2884LCdTg6WbxK2mkPqOkEGncIDyTtG9DhIO/3HrCcAWSS98PWcLX7
-  username:
-    secure: qC0aKO6QJRsHw5L+Q7OYew==
-  artifact: src/
-  on:
-    branch: master
 artifacts:
   - path: '**\*.nupkg'
+deploy:
+- provider: NuGet
+  server:
+  api_key:
+    secure: +WkQsLfLX+2884LCdTg6WbxK2mkPqOkEGncIDyTtG9DhIO/3HrCcAWSS98PWcLX7
+  artifact: /.*\.nupkg/
+  on:
+    branch: master
