--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,17 @@
+version: 0.0.{build}
 image:
   - Visual Studio 2019
 init:
   - git config --global core.autocrlf true
-version: 0.0.{build}
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  version_prefix: '{version}'
+  package_version: '{version}'
+  assembly_version: '{version}'
+  file_version: '{version}'
+  informational_version: '{version}'
 pull_requests:
   do_not_increment_build_number: true
 branches:
