add responsive for reuse code

--- a/src/Webmaster.Core/src/Wangkanai.Webmaster.Core.csproj
+++ b/src/Webmaster.Core/src/Wangkanai.Webmaster.Core.csproj
@@ -13,10 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.4">
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Wangkanai.Responsive" Version="2.0.0-beta13" />
   </ItemGroup>
 
 </Project>
