--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,11 +26,11 @@ clone_depth: 1
 test: 'off'
 artifacts:
   - path: '**\*.nupkg'
-deploy:
-- provider: NuGet
-  server:
-  api_key:
-    secure: +WkQsLfLX+2884LCdTg6WbxK2mkPqOkEGncIDyTtG9DhIO/3HrCcAWSS98PWcLX7
-  artifact: /.*\.nupkg/
-  on:
-    branch: master
+# deploy:
+# - provider: NuGet
+#   server:
+#   api_key:
+#     secure: +WkQsLfLX+2884LCdTg6WbxK2mkPqOkEGncIDyTtG9DhIO/3HrCcAWSS98PWcLX7
+#   artifact: /.*\.nupkg/
+#   on:
+#     branch: master
