--- a/src/Webmaster.Core/src/Wangkanai.Webmaster.Core.csproj
+++ b/src/Webmaster.Core/src/Wangkanai.Webmaster.Core.csproj
@@ -17,7 +17,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Wangkanai.Responsive" Version="2.0.0-beta13" />
+    <PackageReference Include="Wangkanai.Detection" Version="2.0.0-beta14" />
+    <PackageReference Include="Wangkanai.Responsive" Version="2.0.0-beta14" />
   </ItemGroup>
 
 </Project>
