refactor tag helper from razor project

--- a/src/Webmaster.TagHelpers/src/Wangkanai.Webmaster.TagHelpers.csproj
+++ b/src/Webmaster.TagHelpers/src/Wangkanai.Webmaster.TagHelpers.csproj
@@ -13,8 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Webmaster.Core\src\Wangkanai.Webmaster.Core.csproj" />
     <ProjectReference Include="..\..\Webmaster.Razor\src\Wangkanai.Webmaster.Razor.csproj" />
   </ItemGroup>
-  
+
 </Project>
