--- a/NuGet.config
+++ b/NuGet.config
@@ -2,7 +2,7 @@
 <configuration>
   <packageSources>
     <clear/>
-    <add key="myget.org/F/xunit" value="https://www.myget.org/F/wangkanai/api/v3/index.json" protocolVersion="3" />
+    <add key="myget.org" value="https://www.myget.org/F/wangkanai/api/v3/index.json" protocolVersion="3" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
   <disabledPackageSources>
