--- a/src/Webmaster.Core/src/Wangkanai.Webmaster.Core.csproj
+++ b/src/Webmaster.Core/src/Wangkanai.Webmaster.Core.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Wangkanai.Responsive" Version="2.0.0-beta15" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions" />
+  </ItemGroup>
+
 </Project>
