--- a/src/Webmaster/src/Wangkanai.Webmaster.csproj
+++ b/src/Webmaster/src/Wangkanai.Webmaster.csproj
@@ -2,7 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
     <Version>0.0.2</Version>
+    
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Sarin Na Wangkanai</Copyright>
     <PackageProjectUrl>https://github.com/wangkanai/Webmaster</PackageProjectUrl>
@@ -11,12 +15,6 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageIconUrl>http://0.gravatar.com/avatar/f58457d38ab3bc43526c6e52af17494e</PackageIconUrl>
     <Authors>Sarin Na Wangkanai</Authors>
-    <LangVersion>8.0</LangVersion>
-    <Nullable>enable</Nullable>
-
-    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-
-    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   
   <ItemGroup>
@@ -24,14 +22,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\Webmaster.Core\src\Wangkanai.Webmaster.Core.csproj" />
-    <ProjectReference Include="..\..\Webmaster.Routing\src\Wangkanai.Webmaster.Routing.csproj" />
-    <ProjectReference Include="..\..\Webmaster.TagHelpers\src\Wangkanai.Webmaster.TagHelpers.csproj" />
+    <PackageReference Include="Wangkanai.Detection" Version="3.0.0-alpha05" />
   </ItemGroup>
-
-  <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
-    <ItemGroup>
-      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-    </ItemGroup>
-  </Target>
+  
 </Project>
