--- a/sample/Search.RazorPagesApp/Search.RazorPagesApp.csproj
+++ b/sample/Search.RazorPagesApp/Search.RazorPagesApp.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Webmaster\src\Wangkanai.Webmaster.csproj" />
+    <ProjectReference Include="..\..\src\Wangkanai.Webmaster.csproj" />
   </ItemGroup>
 
 </Project>
