--- a/src/Wangkanai.Webmaster.csproj
+++ b/src/Wangkanai.Webmaster.csproj
@@ -1,28 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    
-    <LangVersion>8.0</LangVersion>
-    <Nullable>enable</Nullable>
-    <Version>0.0.3</Version>
-    
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Copyright>Sarin Na Wangkanai</Copyright>
-    <PackageProjectUrl>https://github.com/wangkanai/Webmaster</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/wangkanai/Webmaster.git</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageIconUrl>http://0.gravatar.com/avatar/f58457d38ab3bc43526c6e52af17494e</PackageIconUrl>
-    <Authors>Sarin Na Wangkanai</Authors>
-  </PropertyGroup>
-  
-  <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="Wangkanai.Detection" Version="3.0.0-alpha06" />
-  </ItemGroup>
-  
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.0</TargetFramework>
+
+        <LangVersion>8.0</LangVersion>
+        <Nullable>enable</Nullable>
+        <Version>0.0.3</Version>
+
+        <Authors>Sarin Na Wangkanai</Authors>
+        <Description>ASP.NET Core Search Engine Optimization for Webmaster.</Description>
+        <Copyright>Copyright © 2020 Sarin Na Wangkanai</Copyright>
+        <PackageTags>aspnetcore;webmaster;seo;search;optimization;taghelper</PackageTags>
+        <PackageProjectUrl>https://github.com/wangkanai/Webmaster</PackageProjectUrl>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/wangkanai/Webmaster.git</RepositoryUrl>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <PackageIconUrl>https://raw.githubusercontent.com/wangkanai/Detection/dev/asset/avatar.png</PackageIconUrl>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Wangkanai.Detection" Version="3.0.0-alpha06"/>
+    </ItemGroup>
+
 </Project>
