--- a/sample/WebApp.csproj
+++ b/sample/WebApp.csproj
@@ -3,6 +3,10 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
+    </ItemGroup>
     
     
 </Project>
