--- a/sample/WebApp.csproj
+++ b/sample/WebApp.csproj
@@ -7,6 +7,10 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\src\Wangkanai.Webmaster.csproj" />
+    </ItemGroup>
     
     
 </Project>
