--- a/sample/WebApp/WebApp.csproj
+++ b/sample/WebApp/WebApp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,8 +9,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\Wangkanai.Webmaster.csproj" />
+      <ProjectReference Include="..\..\src\Wangkanai.Webmaster.csproj" />
     </ItemGroup>
-    
-    
+
+
+
 </Project>
