--- a/src/Wangkanai.Webmaster.csproj
+++ b/src/Wangkanai.Webmaster.csproj
@@ -8,7 +8,7 @@
         <Version>0.0.3</Version>
 
         <Authors>Sarin Na Wangkanai</Authors>
-        <Description>ASP.NET Core Search Engine Optimization for Webmaster.</Description>
+        <Description>ASP.NET Core Search Engine Optimization for Webmaster lets you improve the art, craft, and science of driving web traffic to enabling you with easy and efficiency native tool build in the asp.net core library.</Description>
         <Copyright>Copyright © 2020 Sarin Na Wangkanai</Copyright>
         <PackageTags>aspnetcore;webmaster;seo;search;optimization;taghelper</PackageTags>
         <PackageProjectUrl>https://github.com/wangkanai/Webmaster</PackageProjectUrl>
