--- a/src/Wangkanai.Webmaster.csproj
+++ b/src/Wangkanai.Webmaster.csproj
@@ -1,25 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <VersionPrefix>0.0</VersionPrefix>
         <TargetFramework>netcoreapp3.0</TargetFramework>
 
         <LangVersion>8.0</LangVersion>
         <Nullable>enable</Nullable>
-        <Version>0.0.100</Version>
-
+        <NoWarn>NU5048;NU5104</NoWarn>
+    </PropertyGroup>
+    
+    <PropertyGroup>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    </PropertyGroup>
+    
+    <PropertyGroup>
+        <Product>Wangkanai Webmaster</Product>
         <Authors>Sarin Na Wangkanai</Authors>
+        <Copyright>©2016-2020 Sarin Na Wangkanai, All rights reserved</Copyright>
+        
         <Description>ASP.NET Core Search Engine Optimization for Webmaster lets you improve the art, craft, and science of driving web traffic to enabling you with easy and efficiency native tool build in the asp.net core library.</Description>
-        <Copyright>Copyright © 2020 Sarin Na Wangkanai</Copyright>
+        
         <PackageTags>aspnetcore;webmaster;seo;search;optimization;taghelper</PackageTags>
         <PackageProjectUrl>https://github.com/wangkanai/webmaster</PackageProjectUrl>
+        <PackageIconUrl>https://raw.githubusercontent.com/wangkanai/webmaster/main/asset/webmaster-logo.png</PackageIconUrl>
+        <PackageLicenseUrl>https://github.com/wangkanai/Webmaster/blob/main/LICENSE</PackageLicenseUrl>
+        
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/wangkanai/webmaster.git</RepositoryUrl>
-        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-        <PackageIconUrl>https://raw.githubusercontent.com/wangkanai/webmaster/dev/asset/webmaster-logo.png</PackageIconUrl>
     </PropertyGroup>
 
     <ItemGroup>
-        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Wangkanai.Detection" Version="3.0.0-alpha13"/>
     </ItemGroup>
 
 </Project>
