--- a/sample/PageApp/PageApp.csproj
+++ b/sample/PageApp/PageApp.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
         <Version>1.0.0</Version>
+        <LangVersion>default</LangVersion>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
