--- a/src/Wangkanai.Webmaster.csproj
+++ b/src/Wangkanai.Webmaster.csproj
@@ -2,9 +2,9 @@
 
     <PropertyGroup>
         <VersionPrefix>0.0</VersionPrefix>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
 
-        <LangVersion>8.0</LangVersion>
+        <LangVersion>default</LangVersion>
         <Nullable>enable</Nullable>
         <NoWarn>NU5048;NU5104</NoWarn>
     </PropertyGroup>
@@ -30,11 +30,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Wangkanai.Detection" Version="3.0.0-alpha13"/>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
 </Project>
