--- a/src/Wangkanai.Webmaster.csproj
+++ b/src/Wangkanai.Webmaster.csproj
@@ -9,7 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Wangkanai.Runtime" Version="*" />
+      <PackageReference Include="Wangkanai.Runtime" Version="0.7.200" />
     </ItemGroup>
 
 </Project>
